orchestration/fallback-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fallback-webapp
  labels:
    app: fallback-webapp
spec:
#  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5001
  selector:
    app: fallback-webapp
