orchestration/main-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: main-webapp
  labels:
    app: main-webapp
spec:
#  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    app: main-webapp
