orchestration/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
spec:
  defaultBackend:
    service:
      name: fallback-webapp
      port:
        number: 80
  rules:
    - host: spellchecker.mds
      http:
        paths:
          - path: /check
            pathType: Prefix
            backend:
              service:
                name: main-webapp
                port:
                  number: 80
